@startuml diag_c
title Diagramme de classe

class Batiment {
    - String nom
    + creerZone(): Zone
    + getWeather(): Meteo
}

class Zone {
    - String nom
    - Date dateCapture
    + prendrePhotos()
}
note left: Une zone peut représenter\nune pièce ou un sous-espace\nd'une pièce (cas pour un couloir\nou une grande pièce).

class Meteo {
    - String description
    - String iconUrl
    - double temp
    - double tempRessentie
    - double pression
    - double humidite
    - double vVent
}

class Photo {
    + dessinerPassage()
    + detruirePassage(Passage p)
}

class Passage {
    - int x1
    - int y1
    - int x2
    - int y2
    + relier(Zone autreCote)
}
note left: Un passage peut représenter\nn'importe quelle zone physique.\nUne porte, un escalier, ou encore\ndu vide pour avancer dans\nune même pièce.


Batiment "1" --> "*" Zone
Zone "1" --> "4" Photo
Photo "1" --> "*" Passage
Passage "*" --> "1" Zone : autreCote
Zone "1" --> "1" Meteo

@enduml